policies/selinux-user/ephemeralcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-user-ephemeralcontainers.pss.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-user-ephemeralcontainers.pss.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-user-ephemeralcontainers.pss.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-user-ephemeralcontainers.pss.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-user-ephemeralcontainers.pss.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-user-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-selinux-user-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-user-ephemeralcontainers.pss.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
