policies/selinux-user/ephemeralcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-selinux-user-ephemeralcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  validations:
    - expression: >
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          !has(ec.securityContext) ||
          !has(ec.securityContext.seLinuxOptions) ||
          !has(ec.securityContext.seLinuxOptions.user) ||
          ec.securityContext.seLinuxOptions.user == ""
        )
      message: >
        spec.ephemeralContainers[*].securityContext.seLinuxOptions.user must be undefined or an empty string ("").
